Refactoring getAvailableBooks in BookEntity